added an index.htmlfile

--- a/index.html
+++ b/index.html
@@ -30,3 +30,115 @@
             <button class="btn">Signup</button>
           </nav>
         </section>
+         <section class="banner">
+          <h1 class="banner-title">
+            Cool Dark UI Template for Webflow Agencies!
+          </h1>
+          <button class="btn">Stay Focused</button>
+        </section>
+      </div>
+    </header>
+     <main>
+      <div class="container">
+        <!-- action section -->
+        <section class="action">
+          <div class="action-text-content">
+            <h2 class="section-title">See It in Action</h2>
+            <p>
+              Explore the live preview and imagine your brand in this bold new
+              look.
+            </p>
+            <button class="btn">Launch Live Preview</button>
+          </div>
+          <div class="action-img">
+            <img src="./images/wc-mini.png" alt="webflow mini" />
+          </div>
+        </section>
+        <!-- productive users -->
+        <section class="productive-users">
+          <h2 class="section-title text-center">
+            Joined Thousands of Productive Users
+          </h2>
+          <div class="productives-content">
+            <div class="productive">
+              <h2>50K</h2>
+              <p><small>Active Users</small></p>
+            </div>
+            <div class="productive">
+              <h2>2M+</h2>
+              <p><small>Focus Sessions</small></p>
+            </div>
+            <div class="productive">
+              <h2>95%</h2>
+              <p><small>Satisfaction Rate</small></p>
+            </div>
+          </div>
+        </section>
+        <!-- feedback section -->
+        <section class="feedback">
+          <h2 class="section-title text-center">What our users say</h2>
+          <div class="feedback-content">
+            <div class="review">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <h4 class="review-title">Loved by Designers</h4>
+              <p class="review-text">
+                "Webflow has transformed the way I design websites. The
+                flexibility and ease of use are unmatched. Highly recommend it
+                to any designer looking to elevate their work!"
+              </p>
+              <div class="reviewer-details">
+                <img src="./images/avatar.png" alt="reviewer avatar" />
+                <div class="review-details">
+                  <h5 class="reviewer-name">Alex Johnson</h5>
+                  <p class="reviewer-role"><small>Date : 11/07/2025</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="review">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <h4 class="review-title">This is the best</h4>
+              <p class="review-text">
+                "Webflow has completely changed the way I approach web design.
+                The intuitive interface and powerful features make it a game
+                changer for any designer. I can't imagine going back to my old
+                workflow!"
+              </p>
+              <div class="reviewer-details">
+                <img src="./images/avatar.png" alt="reviewer avatar" />
+                <div class="review-details">
+                  <h5 class="reviewer-name">khabib Nurmagomedov</h5>
+                  <p class="reviewer-role"><small>Date : 30/04/2025</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="review">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <h4 class="review-title">Loved by Developers</h4>
+              <p class="review-text">
+                "As a developer, I appreciate the clean code and flexibility
+                that Webflow offers. It allows me to focus on building great
+                user experiences without getting bogged down in the details. A
+                must for any serious web developer!"
+              </p>
+              <div class="reviewer-details">
+                <img src="./images/avatar.png" alt="reviewer avatar" />
+                <div class="review-details">
+                  <h5 class="reviewer-name">jonatha miecheal</h5>
+                  <p class="reviewer-role"><small>Date : 11/06/2025</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
