--- a/index.html
+++ b/index.html
@@ -142,3 +142,42 @@
             </div>
           </div>
         </section>
+         <section class="touch">
+          <div>
+            <h2 class="section-title touch-title">Let’s Get in Touch</h2>
+          </div>
+          <div>
+            <form action="#">
+              <label for="email">Email</label> <br />
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Enter your email"
+                required
+              />
+              <br />
+              <label for="name">Name</label> <br />
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Enter your name"
+                required
+              />
+              <br />
+              <label for="message">Message</label> <br />
+              <textarea
+                cols="30"
+                rows="5"
+                id="message"
+                name="message"
+                placeholder="Type your message here..."
+              ></textarea>
+              <br />
+              <button class="btn touch-btn">Submit</button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
