added the availble file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webflow</title>
     <!-- css link -->
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <!-- fontawesome link -->
     <link
       rel="stylesheet"
@@ -26,11 +26,12 @@
       <div class="container">
         <section class="navbar">
           <nav>
-            <h2 class="logo">WEB<span class="bg-orange">F</span>LOW</h2>
+            <h2 class="logo">LOGO</h2>
             <button class="btn">Signup</button>
           </nav>
         </section>
-         <section class="banner">
+        <!-- banner section -->
+        <section class="banner">
           <h1 class="banner-title">
             Cool Dark UI Template for Webflow Agencies!
           </h1>
@@ -38,7 +39,8 @@
         </section>
       </div>
     </header>
-     <main>
+    <!-- main section -->
+    <main>
       <div class="container">
         <!-- action section -->
         <section class="action">
@@ -115,7 +117,7 @@
                 <img src="./images/avatar.png" alt="reviewer avatar" />
                 <div class="review-details">
                   <h5 class="reviewer-name">khabib Nurmagomedov</h5>
-                  <p class="reviewer-role"><small>Date : 30/04/2025</small></p>
+                  <p class="reviewer-role"><small>Date : 11/06/2025</small></p>
                 </div>
               </div>
             </div>
@@ -142,9 +144,10 @@
             </div>
           </div>
         </section>
-         <section class="touch">
+        <!-- touch section -->
+        <section class="touch">
           <div>
-            <h2 class="section-title touch-title">Let’s Get in Touch</h2>
+            <h2 class=" touch-title">Let’s Get in Touch</h2>
           </div>
           <div>
             <form action="#">
@@ -181,3 +184,33 @@
         </section>
       </div>
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <h2 class="logo text-center">
+            LOGO
+          </h2>
+          <p>
+            Ready to elevate your online presence? Contact us today to discuss
+            your project and discover how we can bring your vision to life.
+          </p>
+          <ul class="social-links">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">How it works</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+          </ul>
+          <p class="text-center">&copy; 2025 Webflow. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
