added the availble file

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <a href="#">Services</a>
             </li>
           </ul>
-          <p class="text-center">&copy; 2025 Webflow. All rights reserved.</p>
+          <p class="text-center">&copy; 2025 LOGO. All rights reserved.</p>
         </div>
       </div>
     </footer>
